--- a/example/views/interaction.html
+++ b/example/views/interaction.html
@@ -1,4 +1,4 @@
 <form autocomplete="off" action="/interaction/<%= cookie.uuid %>/confirm" method="post">
   <input type="hidden" name="uuid" value="<%= cookie.uuid %>"/>
-  <button type="submit" name="submit" class="login login-submit">Continue</button>
+  <button autofocus type="submit" name="submit" class="login login-submit">Continue</button>
 </form>
