unname the example submit button

--- a/example/views/login.html
+++ b/example/views/login.html
@@ -5,5 +5,5 @@
 
   <label><input type="checkbox" name="remember" value="yes" checked="yes">Stay signed in</label>
 
-  <button type="submit" name="submit" class="login login-submit">Sign-in</button>
+  <button type="submit" class="login login-submit">Sign-in</button>
 </form>
