--- a/example/views/interaction.html
+++ b/example/views/interaction.html
@@ -1,4 +1,4 @@
-<form autocomplete="off" action="/interaction/<%= cookie.uuid %>/confirm" method="post">
-  <input type="hidden" name="uuid" value="<%= cookie.uuid %>"/>
+<form autocomplete="off" action="/interaction/<%= details.uuid %>/confirm" method="post">
+  <input type="hidden" name="uuid" value="<%= details.uuid %>"/>
   <button autofocus type="submit" class="login login-submit">Continue</button>
 </form>
