--- a/example/views/login.html
+++ b/example/views/login.html
@@ -1,7 +1,7 @@
-<form autocomplete="off" action="/interaction/<%= cookie.uuid %>/login" method="post">
-  <input type="hidden" name="uuid" value="<%= cookie.uuid %>"/>
-  <input required type="text" name="login" placeholder="Enter any login" <% if (!cookie.params.login_hint) { %>autofocus="on"<% } else { %> value="<%= cookie.params.login_hint %>" <% } %>>
-  <input required type="password" name="password" placeholder="and password" <% if (cookie.params.login_hint) { %>autofocus="on"<% } %>>
+<form autocomplete="off" action="/interaction/<%= details.uuid %>/login" method="post">
+  <input type="hidden" name="uuid" value="<%= details.uuid %>"/>
+  <input required type="text" name="login" placeholder="Enter any login" <% if (!details.params.login_hint) { %>autofocus="on"<% } else { %> value="<%= details.params.login_hint %>" <% } %>>
+  <input required type="password" name="password" placeholder="and password" <% if (details.params.login_hint) { %>autofocus="on"<% } %>>
 
   <label><input type="checkbox" name="remember" value="yes" checked="yes">Stay signed in</label>
 
