--- a/example/views/_layout.html
+++ b/example/views/_layout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Sign-in</title>
-    <style type="text/css">
+    <style>
       @import url(https://fonts.googleapis.com/css?family=Roboto:400,100);
 
       body {
@@ -51,14 +51,6 @@
         -moz-box-sizing: border-box;
       }
 
-      .login-card input[type=text]:hover, input[type=email]:hover, input[type=password]:hover {
-        border: 1px solid #b9b9b9;
-        border-top: 1px solid #a0a0a0;
-        -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-        -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-        box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-      }
-
       .login {
         text-align: center;
         font-size: 14px;
@@ -75,12 +67,6 @@
         background-color: #4d90fe;
       }
 
-      .login-submit:hover {
-        border: 0px;
-        text-shadow: 0 1px rgba(0,0,0,0.3);
-        background-color: #357ae8;
-      }
-
       .login-card a {
         text-decoration: none;
         color: #666;
@@ -88,11 +74,6 @@
         text-align: center;
         display: inline-block;
         opacity: 0.6;
-        transition: opacity ease 0.5s;
-      }
-
-      .login-card a:hover {
-        opacity: 1;
       }
 
       .login-help {
