feat: update device flow to draft-12
User Code inputs can now be mixed case and punctuation and whitespace is
ignored. To  accommodate for this quality of life feature the `charset`
is now fixed to be either base-20 or just digits and `mask` can only
include `*- ` characters. DeviceCode model's userCode property is now
always uppercase with no punctuation or whitespace.

The rendered text input is now opened with a numeric keyboard on mobile
devices if the charset is `digits`.

--- a/example/views/_layout.html
+++ b/example/views/_layout.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html >
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Sign-in</title>
     <style>
       @import url(https://fonts.googleapis.com/css?family=Roboto:400,100);
