example: provide separate examples for express, koa, standalone

--- a/example/views/_layout.ejs
+++ b/example/views/_layout.ejs
@@ -129,7 +129,7 @@
         <%= details.uuid %>
       </div>
       <div class="grant-debug">
-        <%- debug %>
+        <%- params %>
       </div>
       <div class="grant-debug">
         <%- interaction %>
