feat: automatically add inline scripts to CSP script-src directives
BREAKING CHANGE: The `features.webMessageResponseMode.scriptNonce`
helper was removed, all inline scripts will now have their sha256
automatically added to CSP script-src directives when one is present.

Closes #850
Closes #584

--- a/example/views/repost.ejs
+++ b/example/views/repost.ejs
@@ -3,7 +3,7 @@
     <title>Fragment Federated Callback Repost Form</title>
   </head>
   <body>
-    <script type="text/javascript">
+    <script>
     function parseQuery(queryString) {
       var query = {};
       var pairs = (queryString[0] === '?' ? queryString.substr(1) : queryString).split('&');
